--- a/About_Us.html
+++ b/About_Us.html
@@ -210,7 +210,7 @@
 		<th></th><th></th><th></th>
 	</tr>
 	<tr>
-		<td></td><td>Interested?<br/>Join us today!<br/><a href='Register.html'><button id="register">Register</button></a><br/></td><td></td>
+		<td></td><td>Interested?<br/>Join us today!<br/><button id="register"><a href='Register.html'>Register</a></button><br/></td><td></td>
 	</tr>
 	<tr>
 		<td></td><td></td><td></td>
