--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
 					<div class="dropdown">
 						Rules
 						<div class="dropdown-content2">
-							<a href="internationalChessRules.html">International Chess</a>
+							<a href="internationChessRules.html">International Chess</a>
 							<a href="chineseChessRules.html">Chinese Chess</a>
 							<a href="attire_equipment.html">Attire and Equipment</a>
 						</div>
